Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122037

error: ambiguous template instantiation for ‘struct std::indirectly_readable_traits<QVersionNumber::It>’

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.8.0 FF
    • 6.8.0 FF
    • WebEngine
    • None
    • a5f859263 (dev)

    Description

      /opt/b2qt/3.2/sysroots/armv7vet2hf-neon-poky-linux-gnueabi/usr/include/c++/10.2.0/bits/iterator_concepts.h:243:13: error: ambiguous template instantiation for ‘struct std::indirectly_readable_traits<QVersionNumber::It>’
        243 |       using __iter_value_t = typename
            |             ^~~~~~~~~~~~~~
      /opt/b2qt/3.2/sysroots/armv7vet2hf-neon-poky-linux-gnueabi/usr/include/c++/10.2.0/bits/iterator_concepts.h:231:12: note: candidates are: ‘template<class _Tp>  requires requires{typename _Tp::value_type;} struct std::indirectly_readable_traits<_Iter> [with _Tp = QVersionNumber::It]’
        231 |     struct indirectly_readable_traits<_Tp>
            |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      /opt/b2qt/3.2/sysroots/armv7vet2hf-neon-poky-linux-gnueabi/usr/include/c++/10.2.0/bits/iterator_concepts.h:236:12: note:                 ‘template<class _Tp>  requires requires{typename _Tp::element_type;} struct std::indirectly_readable_traits<_Iter> [with _Tp = QVersionNumber::It]’
        236 |     struct indirectly_readable_traits<_Tp>
            |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes