QVersionNumber: apply LWG 3346 work-around

QtWebEngine builds using GCC 10.2 have hit the GCC < 10.4 problem with
containers that define both element_type and value_type, so lift the
work-around from QList to QVersionNumber, too.

Amends 2188ca2c5df6f21a953c002edbe5b2d2cc2c2d2c.

Fixes: QTBUG-122037
Change-Id: Idb59b5325ab6308cfd7d1a5559e45a01a5802099
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>